Kubernetes/YAML/Complete-app/Drupal-postgres/drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ingress
spec:
  rules:
  - host: test.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: drupal-service
            port: 
              number: 80
